# Object-Oriented_Programming_laboratory_work_2

./: .pre-commit-config.yaml  README.md  pyproject.toml
individual/: individual_1.py
src/: example_1.py  individual_1.py  individual_2.py
tests/: test_individual_1.py  test_individual_2.py
